--- a/public/styles.css
+++ b/public/styles.css
@@ -1,53 +1,18 @@
-html, body {
+html,
+body {
     height: 100%;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
     font-family: Geneva, Arial;
     color: black;
-    margin: 0;
-    padding: 0;
 }
 
 h1 {
-    margin: 0;
-    font-size: 2.5em;
-    padding: 0.5em;
+    border: 5px solid orange;
+    padding: 100px;
     text-align: center;
     border-radius: 10px;
-    color: #333;
-}
-
-form {
-    display: flex;
-    flex-direction: column;
-    width: 300px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    border: 5px solid orange;
-    border-radius: 10px;
-    padding: 1em;
-}
-
-input {
-    font-size: 1em;
-    padding: 0.5em;
-    margin: 0.5em 0;
-    border-radius: 5px;
-    border: 1px solid #ddd;
-}
-
-button {
-    font-size: 1em;
-    padding: 0.5em;
-    margin: 0.5em 0;
-    border-radius: 5px;
-    background-color: orange;
-    color: white;
-    border: none;
-    cursor: pointer;
-}
-
-button:hover {
-    opacity: 0.9;
+    font-size: 6em;
 }
