--- a/public/styles.css
+++ b/public/styles.css
@@ -1,4 +1,3 @@
-/* Reset for consistency */
 *,
 *::before,
 *::after {
@@ -9,7 +8,6 @@
   vertical-align: baseline;
 }
 
-/* Global styles */
 body {
   background-color: #121212;
   color: #ffffff;
@@ -29,13 +27,12 @@ h1 {
   margin-bottom: 20px;
 }
 
-/* Form and interactive elements */
 form {
   background: #222;
   padding: 2em;
   border-radius: 10px;
   width: 90%;
-  max-width: 400px; /* Limit the size of form on large screens */
+  max-width: 400px;
   margin: 20px;
 }
 
@@ -47,7 +44,7 @@ button {
   border-radius: 5px;
   background: #333;
   color: #fff;
-  border: 1px solid transparent; /* Prevents jumping on focus */
+  border: 1px solid transparent;
 }
 
 input:focus,
@@ -60,7 +57,7 @@ button {
   background-color: orange;
   border: none;
   cursor: pointer;
-  transition: background-color 0.3s ease; /* Smooth transition for hover effect */
+  transition: background-color 0.3s ease;
 }
 
 button:hover,
@@ -68,7 +65,6 @@ button:focus {
   background-color: #e67e22;
 }
 
-/* Media Queries */
 @media (max-width: 600px) {
   body {
     padding-top: 20px;
