--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11,7 +11,7 @@
 body {
   background-color: #121212;
   color: #ffffff;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1.6;
   display: flex;
   flex-direction: column;
@@ -75,4 +75,3 @@ button:focus {
     margin-bottom: 10px;
   }
 }
-
